# orbit

./: CMakeLists.txt  LICENSE.md  README.md
include/: constants.hpp  matrix3x3.hpp  orbit.hpp  vector3.hpp
source/: matrix3x3.cpp  orbit.cpp  vector3.cpp
test/: CMakeLists.txt  test-matrix3x3.cpp  test-orbit.cpp  test-vector3.cpp  testvector3.cpp
